css/style.css
p, h1, h2, h3, h4, h5, h6, li {
  font-family: "Lato", sans-serif;
  color: #701E6D;
}

h2, h5 {
  font-style: italic;
}

h1 {
  font-family: "Passion One", sans-serif;
}

h3 {
  font-weight: bold;
}

nav div {
  display: block;
}

nav div ul li {
  float: left;
  margin: 0;
}

nav div h2 {
  display: inline-block;
  margin: 0 0.313rem 0 0;
  padding: 0;
  color: #701E6D;
  text-shadow: 0.125rem 0.063rem #DCCCDF;
}

nav div ul {
  display: inline-block;
  list-style-type: none;
  padding: 0;
  margin: 0;
}

nav div ul li a {
  display: block;
  text-decoration: none;
  background-color: #DCCCDF;
  color: #701E6D;
  padding: 0.313rem;
}

nav {
  border-style: outset;
  border-color: #701E6D;
  width: 100%;
  height: 2.125rem;
  margin: 0;
  padding: 0;
  text-align: center;
}

header {
  clear: left;
  width: 100%;
  text-align: center;
}

#hdrmovies, #hdrsongs, #hdrhome {
  background: -webkit-linear-gradient(#701E6D, #DCCCDF);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

header h1 {
  display: inline-block;
  padding: 0;
  margin: 0;
}

header p {
  color: #701E6D;
  display: block;
  clear: left;
  padding: 0;
  margin: 0;
}

#sunmi {
  display: block;
  border-radius: 30%;
  text-shadow: 0.125rem 0.125rem 0.25rem #000000;
  text-align: center;
}

main {
  clear: left;
}

.songbox {
  background-color: #DCCCDF;
  border-radius: 3%;
  padding: 0.313rem;
  margin: 0.313rem 0;
}

.songbox ul {
  list-style-type: circle;
}

#sunmibox {
  margin: 0.313rem 0;
}

#column1, #column2 {
  float: left;
  width: 48%;
}

#column1 {
  margin: 0 1%;
}

#column2 {
  margin: 0 1%;
}

#mainmovies {
  float: left;
  width: 30%;
}

#asidemovies {
  float: left;
  width: 70%;
}

#resume1 {
  float: left;
  width: 38%;
  margin: 0 1%;
}

#resume2 {
  float: left;
  width: 58%;
  margin: 0 1%;
}

#resumehdr {
  text-align: center;
  background-color: #DCCCDF;
  width: 100%;
}

.resumelist {
  list-style-type: none;
}

/**Media queries will go under here**/

@media screen and (prefers-color-scheme: dark) {
  :root {
    body {
      background-color: #701E6D;
    }
    p, h1, h2, h3, h4, h5, h6, li {
      font-family: "Lato", sans-serif;
      color: #FFF;
    }
    nav div h2 {
      display: inline-block;
      margin: 0 0.313rem 0 0;
      padding: 0;
      color: #DCCCDF;
      text-shadow: 0.125rem 0.063rem #701E6D;
    }
    nav div ul li a {
      display: block;
      text-decoration: none;
      background-color: #FFF;
      color: #DCCCDF;
      padding: 0.313rem;
    }
    nav {
      border-style: outset;
      border-color: #DCCCDF;
      width: 100%;
      height: 2.125rem;
      margin: 0;
      padding: 0;
      text-align: center;
    }
    #hdrmovies, #hdrsongs, #hdrhome {
      background: -webkit-linear-gradient(#DCCCDF, #FFFFF);
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
    }
    header p {
      color: #DCCCDF;
      display: block;
      clear: left;
      padding: 0;
      margin: 0;
    }
  }
}

